--- a/source/R5T.T0068.X001/R5T.T0068.X001.csproj
+++ b/source/R5T.T0068.X001/R5T.T0068.X001.csproj
@@ -1,11 +1,11 @@
 <Project Sdk="Microsoft.NET.Sdk">
-  <ItemGroup>
-    <ProjectReference Include="..\R5T.T0068\R5T.T0068.csproj" />
-  </ItemGroup>
   <PropertyGroup>
-    <OutputType>Exe</OutputType>
     <TargetFramework>net5.0</TargetFramework>
     <GenerateDocumentationFile>true</GenerateDocumentationFile>
     <NoWarn>1591;1573</NoWarn>
   </PropertyGroup>
+  <ItemGroup>
+    <ProjectReference Include="..\..\..\R5T.B0001\source\R5T.B0001.X001\R5T.B0001.X001.csproj" />
+    <ProjectReference Include="..\R5T.T0068\R5T.T0068.csproj" />
+  </ItemGroup>
 </Project>
